--- a/templates/update_mortgage.html
+++ b/templates/update_mortgage.html
@@ -36,28 +36,28 @@
 
                 <div class="row mb-3">
                     <div class="col">
-                        <label for="principal">Principal ($):</label>
+                        <label for="principal">New Principal ($):</label>
                         <input type="number" id="principal" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
-                        <label for="interest">Interest (%):</label>
+                        <label for="interest">New Interest (%):</label>
                         <input type="number" id="interest" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
-                        <label for="term_years">Term (Years):</label>
+                        <label for="term_years">New Term (Years):</label>
                         <input type="number" id="term_years" class="form-control" required>
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col">
-                        <label for="payment_override">Payment Override yearly($):</label>
+                        <label for="payment_override">Extra Payment($):</label>
                         <input type="number" id="payment_override" class="form-control" required>
                     </div>
                 </div>
