--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,42 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
 
 <div class="container">
-    <div class="center">
-        <h1>Sign Up</h1>
-        <form action="{{ url_for('signup') }}" method="post">
-            <div class="txt_field">
-                <i class="fas fa-user input-icon"></i>
-                <input type="text" name="username" required>
-                <span></span>
-                <label>Username</label>
-            </div>
-            <div class="txt_field">
-                <i class="fas fa-lock input-icon"></i>
-                <input type="password" name="password" required>
-                <span></span>
-                <label>Password</label>
-            </div>
-            <div class="txt_field">
-                <i class="fas fa-lock input-icon"></i>
-                <input type="password" name="confirm_password" required>
-                <span></span>
-                <label>Confirm Password</label>
-            </div>
-
-            <input name="submit" type="Submit" value="Sign Up">
-            <div class="signup_link">
-                Already a member? <a href="{{ url_for('login') }}">Log in</a>
-            </div>
-        </form>
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <h1 class="text-center">Sign Up</h1>
+            {% if error %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endif %}
+            <form action="{{ url_for('signup') }}" method="post">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                        <input type="text" id="username" name="username" class="form-control" required>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                        <input type="password" id="password" name="password" class="form-control" required>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="confirm_password" class="form-label">Confirm Password</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                        <input type="password" id="confirm_password" name="confirm_password" class="form-control" required>
+                    </div>
+                </div>
+                <div class="d-grid">
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                </div>
+                <div class="mt-3 text-center">
+                    Already a member? <a href="{{ url_for('login') }}">Log in</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
